# tape

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  PRODUCT.md  README.md  SECURITY.md  eslint.config.mjs  package-lock.json  package.json  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
components/: app-shell.tsx  calendar-automation-panel.tsx  calendar-sync-button.tsx  dashboard-workflow-summary.tsx  legal-page.tsx  local-date-time.tsx  meeting-access-summary.tsx  meeting-actions.tsx  meeting-auto-refresh.tsx  meeting-bot-recovery-panel.tsx  meeting-entity-links.tsx  meeting-header-metadata.tsx  meeting-link-form.tsx  meeting-list.tsx  meeting-recording-parts.tsx  meeting-recovery-upload-panel.tsx  mobile-meeting-recorder.tsx  onesignal-login.tsx  organization-logo-image.tsx  product-logo.tsx  related-meetings-card.tsx  share-dialog.tsx  sign-out-button.tsx  transcript-viewer.tsx  upload-dropzone.tsx
db/: client.ts  schema.ts
docs/: meeting-note-mcp-api.md  setup.md  testing.md
inngest/: client.ts  functions.ts
lib/: access.ts  admin-access.ts  auth-guards.ts  auth.ts  calendar-auto-join.ts  calendar-connection-live-check.ts  calendar-connection-queries.ts  current-transcript-job.ts  dashboard-workflow-summary.ts  database-env.ts  elevenlabs-transcripts.ts  env.ts  form-data.ts  google-auth.ts  google-calendar-auth.ts  google-calendar-constants.ts  google-calendar-oauth.ts  google-calendar.ts  local-recorder-auth.ts  (+55 more)
mcp/meeting-note/: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_main.py
(+256 files in other folders)
